--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -12,7 +12,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-
+    
     - name: Install dependencies
+      uses: actions/checkout@v4.1.7
       run: |
         pip install -r requirements.txt
